<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!-- Gambar Cerita -->
        <ImageView
                android:id="@+id/iv_photo"
                android:transitionName="imageTransition"
                android:layout_width="0dp"
                android:layout_height="320dp"
                android:contentDescription="@string/story_photo"
                android:src="@drawable/home"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        />

        <!-- LinearLayout untuk ikon dan nama pengguna -->
        <LinearLayout
                android:id="@+id/ll_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/iv_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="UseCompoundDrawables">

            <!-- Ikon Pengguna -->
            <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_person_24dp"
                    android:layout_marginEnd="6dp"
            />

            <!-- Nama Pengguna -->
            <TextView
                    android:id="@+id/tv_name"
                    android:transitionName="nameTransition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/name_story"/>
        </LinearLayout>

        <!-- Deskripsi Cerita -->
        <TextView
                android:id="@+id/tv_description"
                android:transitionName="descriptionTransition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/description_story"
                android:paddingVertical="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_user_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="RtlSymmetry"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
